# memflow-cmake-example

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: main.c  main.cpp
